# Veritas

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/artifacts/audio/: metrics.json
backend/artifacts/image/: metrics.json
backend/src/veritas/: __init__.py  cli.py  config.py
backend/src/veritas/api/: __init__.py  app.py  cache.py  config.py  explainer.py  inference.py  schemas.py
backend/src/veritas/data/: __init__.py  datasets.py  manifest.py  prepare.py  splitting.py  synthetic.py
backend/src/veritas/explain/: __init__.py  gradcam.py
backend/src/veritas/export/: __init__.py  onnx_export.py
backend/src/veritas/models/: __init__.py  audio_model.py  image_model.py
backend/src/veritas/tasks/: __init__.py  app.py  video.py
backend/src/veritas/training/: __init__.py  audio_data.py  image_data.py  metrics.py  seed.py  train_audio.py  train_image.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_datasets.py  test_export.py  test_gradcam.py  test_manifest.py  test_metrics.py  test_prepare.py  test_splitting.py  test_train_audio.py  test_train_image.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConfidenceBar.tsx  HeatmapView.tsx  UploadDropzone.tsx  VerdictCard.tsx
frontend/src/lib/: api.ts  types.ts
