[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritas"
version = "0.1.0"
description = "Deepfake & AI-content detector: identity-safe data prep, ViT/Wav2Vec2 detectors, ONNX inference API."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Veritas" }]

# The CORE package depends only on the Python standard library, so the
# data-preparation pipeline and its identity-leakage guarantee run anywhere
# without compiling numpy/torch wheels.  Heavier capabilities are opt-in below.
dependencies = []

[project.optional-dependencies]
# Phase 2/3: model fine-tuning (ViT image + Wav2Vec2 audio).
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "pillow>=10.0",
    "soundfile>=0.12",
]
# Phase 4/5: ONNX export + serving.
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "onnxruntime>=1.17",
    "redis>=5.0",
    "celery>=5.3",
    "pillow>=10.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
veritas = "veritas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "ml: tests that require the optional 'ml' dependency group (torch/transformers).",
    "api: tests that require the optional 'api' dependency group (fastapi/onnxruntime).",
]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # argparse/Fastapi default-in-call patterns

[tool.mypy]
python_version = "3.10"
files = ["src/veritas"]
ignore_missing_imports = true
warn_unused_ignores = false
# The optional ml/api modules import torch/fastapi which aren't installed in the
# core type-check job; exclude them so the stdlib core stays strictly typed.
exclude = "(models|training|export|explain|api|tasks)/"
